force-app/main/default/objects/Activation__c/fields/Acivation_Check_Result__c.field-meta.xml
<CustomField>
    <fullName>Acivation_Check_Result__c</fullName>
    <description>The Activation Check button will run the check to validate the activation and inform the user about data values to be corrected</description>
    <inlineHelpText>The Activation Check button will run the check to validate the activation and inform the user about data values to be corrected</inlineHelpText>
    <label>Acivation Check Result</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>