force-app/main/default/objects/Activation__c/fields/Activation_Check__c.field-meta.xml
<CustomField>
    <fullName>Activation_Check__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The check object containing fields that validate the quantities of this activation&apos;s related lines</description>
    <label>Activation Check</label>
    <referenceTo>Activation_Check__c</referenceTo>
    <relationshipLabel>Activations</relationshipLabel>
    <relationshipName>Activations</relationshipName>
    <type>Lookup</type>
</CustomField>