force-app/main/default/objects/Activation__c/fields/Activation_Check_Time__c.field-meta.xml
<CustomField>
    <fullName>Activation_Check_Time__c</fullName>
    <description>Identify the time when the activation check button is used to store the activation check results</description>
    <inlineHelpText>Identify the time when the activation check button is used to store the activation check results</inlineHelpText>
    <label>Activation Check Time</label>
    <type>DateTime</type>
</CustomField>