force-app/main/default/objects/Activation__c/fields/Activation_Date_Portal__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date_Portal__c</fullName>
    <label>Activation Date Portal</label>
    <summarizedField>Activation_line__c.Number_Porting_Specific_Date__c</summarizedField>
    <summaryForeignKey>Activation_line__c.Activation__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>