force-app/main/default/objects/Activation__c/fields/Activation_Line_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Activation_Line_Error_Code__c</fullName>
    <description>Shows if the related Activation Line has an error</description>
    <label>Activation Line Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>