force-app/main/default/objects/Activation__c/fields/Activation_Notification__c.field-meta.xml
<CustomField>
    <fullName>Activation_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This to inform the Case owner that the Activation Lines are filled by the customer from the onboarding portal.</description>
    <label>Activation Notification</label>
    <type>Checkbox</type>
</CustomField>