force-app/main/default/objects/Activation__c/fields/Actual_Delivery_date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Delivery_date__c</fullName>
    <inlineHelpText>The actual date the solution was delivered to the customer</inlineHelpText>
    <label>Actual Delivery date</label>
    <type>Date</type>
</CustomField>