force-app/main/default/objects/Activation__c/fields/BAN__c.field-meta.xml
<CustomField>
    <fullName>BAN__c</fullName>
    <description>Used when posting data via the Order API to ensure the subscriptions are related to the correct BAN (Billing Account Number)</description>
    <label>BAN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>