force-app/main/default/objects/Activation__c/fields/Bill_To_City__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_City__c</fullName>
    <formula>Case__r.Quote__r.SBQQ__BillingCity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To City</label>
    <type>Text</type>
</CustomField>