force-app/main/default/objects/Activation__c/fields/Bill_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Country__c</fullName>
    <formula>Case__r.Quote__r.SBQQ__BillingCountry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Country</label>
    <type>Text</type>
</CustomField>