force-app/main/default/objects/Activation__c/fields/Bill_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Name__c</fullName>
    <formula>Case__r.Quote__r.SBQQ__BillingName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Name</label>
    <type>Text</type>
</CustomField>