force-app/main/default/objects/Activation__c/fields/Bill_To_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Postal_Code__c</fullName>
    <formula>Case__r.Quote__r.SBQQ__BillingPostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Postal Code</label>
    <type>Text</type>
</CustomField>