force-app/main/default/objects/Activation__c/fields/Bill_To_Street__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Street__c</fullName>
    <formula>Case__r.Quote__r.SBQQ__BillingStreet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Street</label>
    <type>Text</type>
</CustomField>