force-app/main/default/objects/Activation__c/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <formula>TEXT( Case__r.Quote__r.SBQQ__BillingFrequency__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Frequency</label>
    <type>Text</type>
</CustomField>