force-app/main/default/objects/Activation__c/fields/Case_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Account_ID__c</fullName>
    <formula>CASESAFEID(Case__r.AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Account ID</label>
    <type>Text</type>
</CustomField>