force-app/main/default/objects/Activation__c/fields/Case_Closed__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed__c</fullName>
    <description>Field used in Activation dashboard - report on time delivery to display closed cases within quarter</description>
    <formula>Case__r.IsClosed</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Closed</label>
    <type>Checkbox</type>
</CustomField>