force-app/main/default/objects/Activation__c/fields/Case_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Date__c</fullName>
    <description>Field used  in Activation dashboard - report on time delivery to display closed cases within quarter</description>
    <formula>Case__r.ClosedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Closed Date</label>
    <type>DateTime</type>
</CustomField>