force-app/main/default/objects/Activation__c/fields/Corporate_APN_User_billing_code__c.field-meta.xml
<CustomField>
    <fullName>Corporate_APN_User_billing_code__c</fullName>
    <inlineHelpText>Store the custom built billing code for Focus here.</inlineHelpText>
    <label>Corporate APN User Billing code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>