force-app/main/default/objects/Activation__c/fields/Count_Empty_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Count_Empty_Mobile_Number__c</fullName>
    <description>Count how many Activation Lines where Mobile No field is blank</description>
    <label>Count Empty Mobile Number</label>
    <summaryFilterItems>
        <field>Activation_line__c.Mobile_no__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Activation_line__c.Activation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>