force-app/main/default/objects/Activation__c/fields/Count_Phone_no_Status_Nyt_Nummer__c.field-meta.xml
<CustomField>
    <fullName>Count_Phone_no_Status_Nyt_Nummer__c</fullName>
    <description>Count Activation Lines where Phone no Status is &apos;Nyt Nummer&apos;.</description>
    <label>Count Phone no Status Nyt Nummer</label>
    <summaryFilterItems>
        <field>Activation_line__c.Phone_no_Status__c</field>
        <operation>equals</operation>
        <value>New number</value>
    </summaryFilterItems>
    <summaryForeignKey>Activation_line__c.Activation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>