force-app/main/default/objects/Activation__c/fields/Count_Reservation_Status_ERROR__c.field-meta.xml
<CustomField>
    <fullName>Count_Reservation_Status_ERROR__c</fullName>
    <description>Count how many Activation Lines with &apos;Phone Number Reservation Status&apos; ERROR.</description>
    <inlineHelpText>Count how many Activation Lines with &apos;Phone Number Reservation Status&apos; ERROR.</inlineHelpText>
    <label>Count Reservation Status ERROR</label>
    <summaryFilterItems>
        <field>Activation_line__c.Phone_Number_Reservation_Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </summaryFilterItems>
    <summaryForeignKey>Activation_line__c.Activation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>