force-app/main/default/objects/Activation__c/fields/Count_Reservation_Status_INPROGRESS__c.field-meta.xml
<CustomField>
    <fullName>Count_Reservation_Status_INPROGRESS__c</fullName>
    <description>Count how many Activation Lines with &apos;Phone Number Reservation Status&apos; INPROGRESS.</description>
    <inlineHelpText>Count how many Activation Lines with &apos;Phone Number Reservation Status&apos; INPROGRESS.</inlineHelpText>
    <label>Count Reservation Status INPROGRESS</label>
    <summaryFilterItems>
        <field>Activation_line__c.Phone_Number_Reservation_Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </summaryFilterItems>
    <summaryForeignKey>Activation_line__c.Activation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>