force-app/main/default/objects/Activation__c/fields/Discount_Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Discount_Bundle_Name__c</fullName>
    <description>for RPA to store the value</description>
    <label>Discount Bundle Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>