force-app/main/default/objects/Activation__c/fields/EAN_Number__c.field-meta.xml
<CustomField>
    <fullName>EAN_Number__c</fullName>
    <formula>TEXT(Case__r.Quote__r.EAN_number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EAN Number</label>
    <type>Text</type>
</CustomField>