force-app/main/default/objects/Activation__c/fields/Fleet_Complete_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Complete_Quote_ID__c</fullName>
    <inlineHelpText>Please insert the Quote ID from the offer from Fleet Complete.</inlineHelpText>
    <label>Fleet Complete Quote ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>