force-app/main/default/objects/Activation__c/fields/Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email__c</fullName>
    <formula>Case__r.Quote__r.Invoice_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Email</label>
    <type>Text</type>
</CustomField>