force-app/main/default/objects/Activation__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <formula>TEXT( Case__r.Quote__r.Invoice_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Type</label>
    <type>Text</type>
</CustomField>