force-app/main/default/objects/Activation__c/fields/is_Corporate_APN__c.field-meta.xml
<CustomField>
    <fullName>is_Corporate_APN__c</fullName>
    <description>Shows if the Activation contains any Corporate APN product.</description>
    <formula>Case__r.Quote__r.ADD_Corporate_APN__c = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows if the Activation contains any Corporate APN product.</inlineHelpText>
    <label>is_Corporate_APN</label>
    <type>Checkbox</type>
</CustomField>