force-app/main/default/objects/Activation__c/fields/is_SecureManagedGateway_APN__c.field-meta.xml
<CustomField>
    <fullName>is_SecureManagedGateway_APN__c</fullName>
    <description>Shows if the Activation contains any Secure Managed Gateway APN product.</description>
    <formula>Case__r.Quote__r.Add_Secure_Managed_Gateway__c = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows if the Activation contains any Secure Managed Gateway APN product.</inlineHelpText>
    <label>is_SecureManagedGateway_APN</label>
    <type>Checkbox</type>
</CustomField>