force-app/main/default/objects/Activation__c/fields/is_TouchPoint__c.field-meta.xml
<CustomField>
    <fullName>is_TouchPoint__c</fullName>
    <description>Shows if the Activation contains TouchPoint (TP) Activation Lines.</description>
    <formula>Case__r.Quote__r.Touchpoint_Product_Group__c &gt; 0</formula>
    <inlineHelpText>Shows if the Activation contains TouchPoint (TP) Activation Lines.</inlineHelpText>
    <label>is_TouchPoint</label>
    <type>Checkbox</type>
</CustomField>