force-app/main/default/objects/Activation__c/fields/Kisby_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Kisby_Customer_Number__c</fullName>
    <description>User Story 318  - requirements for setting up Fixed in Activation</description>
    <inlineHelpText>Indicate the customer number in Kisby in order to search easily for the customer</inlineHelpText>
    <label>Kisby Customer Number</label>
    <type>TextArea</type>
</CustomField>