force-app/main/default/objects/Activation__c/fields/Max_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Max_Payment_Terms__c</fullName>
    <formula>TEXT( Case__r.Quote__r.Max_Payment_Terms__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Payment Terms</label>
    <type>Text</type>
</CustomField>