force-app/main/default/objects/Activation__c/fields/Modified_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Modified_Delivery_Date__c</fullName>
    <inlineHelpText>This field is used for tracking modifications impacting the delivery date due to unforeseen events due to weather conditions, accidents, timing, customer requests ect.</inlineHelpText>
    <label>Modified Delivery Date</label>
    <type>Date</type>
</CustomField>