force-app/main/default/objects/Activation__c/fields/No_of_Activation_Lines__c.field-meta.xml
<CustomField>
    <fullName>No_of_Activation_Lines__c</fullName>
    <description>User story 303. Needed in order to have overview on case level to see how many activation lines a specific action has</description>
    <inlineHelpText>Summarise the number of activation lines for this activation</inlineHelpText>
    <label>No. of Activation Lines</label>
    <summaryForeignKey>Activation_line__c.Activation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>