force-app/main/default/objects/Activation__c/fields/No_of_eSim__c.field-meta.xml
<CustomField>
    <fullName>No_of_eSim__c</fullName>
    <description>Count no of Activation lines with eSim = yes</description>
    <label>No of eSim</label>
    <summaryFilterItems>
        <field>Activation_line__c.eSim__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>Activation_line__c.Activation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>