force-app/main/default/objects/Activation__c/fields/No_of_Filled_Activation_Lines__c.field-meta.xml
<CustomField>
    <fullName>No_of_Filled_Activation_Lines__c</fullName>
    <description>Counts the amount of Activation Lines that have been filled in through the Onboarding Portal</description>
    <label>No. of Filled Activation Lines</label>
    <summaryFilterItems>
        <field>Activation_line__c.TOP_Activation_Flow_Step__c</field>
        <operation>equals</operation>
        <value>FINISHED</value>
    </summaryFilterItems>
    <summaryForeignKey>Activation_line__c.Activation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>