force-app/main/default/objects/Activation__c/fields/No_of_Location_Lines__c.field-meta.xml
<CustomField>
    <fullName>No_of_Location_Lines__c</fullName>
    <description>No of Location Lines when the Opportunity was closed and data was moved from Location Line to Activation Line.</description>
    <inlineHelpText>Summary of number of valid Location Lines when the Opportunity was closed.</inlineHelpText>
    <label>No. of Location Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>