force-app/main/default/objects/Activation__c/fields/Onboarding_Done__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to send notification to case owner when the onboarding is done from Portal.</description>
    <inlineHelpText>This field is to send notification to case owner when the onboarding is done from Portal.</inlineHelpText>
    <label>Onboarding Done</label>
    <type>Checkbox</type>
</CustomField>