force-app/main/default/objects/Activation__c/fields/Opportunity_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Agreement_Type__c</fullName>
    <formula>TEXT(Case__r.Opportunity__r.Agreement_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Agreement Type</label>
    <type>Text</type>
</CustomField>