force-app/main/default/objects/Activation__c/fields/Opportunity_Implementation_Period_weeks__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Implementation_Period_weeks__c</fullName>
    <formula>Case__r.Opportunity__r.Implementation_Period_weeks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Implementation Period (weeks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>