force-app/main/default/objects/Activation__c/fields/Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Link__c</fullName>
    <description>Hyperlink to Opportunity</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Case__r.Opportunity__r.Id,  Case__r.Opportunity__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>