force-app/main/default/objects/Activation__c/fields/ORDER_API_OrderId__c.field-meta.xml
<CustomField>
    <fullName>ORDER_API_OrderId__c</fullName>
    <description>The orderId information provided by the OrderAPI after a successfull activation call</description>
    <externalId>true</externalId>
    <label>ORDER_API_OrderId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>