force-app/main/default/objects/Activation__c/fields/Order_requested_date__c.field-meta.xml
<CustomField>
    <fullName>Order_requested_date__c</fullName>
    <inlineHelpText>This is the date the sales rep has put on the quote as the contract start date</inlineHelpText>
    <label>Order requested date (from sales)</label>
    <type>Date</type>
</CustomField>