force-app/main/default/objects/Activation__c/fields/Owner_name__c.field-meta.xml
<CustomField>
    <fullName>Owner_name__c</fullName>
    <description>A concatenation of the first and last name of the owner. Used to save column space in list views</description>
    <formula>IF(NOT(ISBLANK(Owner__r.Id)),Owner__r.FirstName +&quot; &quot;+ Owner__r.LastName, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner name</label>
    <type>Text</type>
</CustomField>