force-app/main/default/objects/Activation__c/fields/Phone_Number_Reservation_Status__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Reservation_Status__c</fullName>
    <formula>IF(
	RecordType.DeveloperName  &lt;&gt; &apos;Voice_activation&apos;, 
	&apos;&apos;, 
	IF( 
		AND(
			Count_Reservation_Status_INPROGRESS__c = 0, 
			Count_Reservation_Status_ERROR__c = 0, 
			Count_Reservation_Status_SUCCESS__c = 0
		), 
		&apos;&apos;,
		IF( 
			AND(
				Count_Reservation_Status_INPROGRESS__c = 0, 
				Count_Reservation_Status_ERROR__c = 0,
				Count_Reservation_Status_SUCCESS__c &gt; 0,
				Count_Empty_Mobile_Number__c = 0
			), 
			&apos;SUCCESS&apos;,
			IF(
				AND(
					Count_Reservation_Status_SUCCESS__c &gt; 0,
					Count_Empty_Mobile_Number__c &gt; 0
				),
				&apos;&apos;,
				IF( 
					Count_Reservation_Status_INPROGRESS__c &gt; 0, 
					&apos;INPROGRESS&apos;, 
					&apos;ERROR&apos;
				)
			)
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Number Reservation Status</label>
    <type>Text</type>
</CustomField>