force-app/main/default/objects/Activation__c/fields/Phone_Number_Reservation_Status_Txt__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Reservation_Status_Txt__c</fullName>
    <label>Phone Number Reservation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>