force-app/main/default/objects/Activation__c/fields/Planned_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>Planned_delivery_date__c</fullName>
    <inlineHelpText>The delivery date the activation team is committed to. This date agreed with sales and the customer and is a negotiated date based on urgency, bandwith in the activation team and other factors impacting when the subscription can be delivered</inlineHelpText>
    <label>Planned delivery date</label>
    <type>Date</type>
</CustomField>