force-app/main/default/objects/Activation__c/fields/Product_discrepancies__c.field-meta.xml
<CustomField>
    <fullName>Product_discrepancies__c</fullName>
    <description>If there are any products in this field, you are trying to activate either more or fewer of those than have been sold on the original quote.
Either edit the activation lines or the original quote to avoid these discrepancies.</description>
    <inlineHelpText>If there are any products in this field, you are trying to activate either more or fewer of those than have been sold on the original quote.
Either edit the activation lines or the original quote to avoid these discrepancies.</inlineHelpText>
    <label>Product discrepancies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>