force-app/main/default/objects/Activation__c/fields/QC_4G_Antenne_pakke_2__c.field-meta.xml
<CustomField>
    <fullName>QC_4G_Antenne_pakke_2__c</fullName>
    <formula>Activation_Check__r.Quote_4G_Antenne_pakke_2__c - Activation_Check__r.Count_4G_Antenne_pakke_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If value is different from 0 it indicates that there is a discrepancy between Quantity sold on Quote and amount implemented on Activation Lines. If +xx you miss to activate products, if -xx then you have activated too many products</inlineHelpText>
    <label>QC 4G Antenne pakke 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>