force-app/main/default/objects/Activation__c/fields/QC_70_80_nummer__c.field-meta.xml
<CustomField>
    <fullName>QC_70_80_nummer__c</fullName>
    <formula>Activation_Check__r.Quote_70_80_nummer__c - Activation_Check__r.Count_70_80_nummer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If value is different from 0 it indicates that there is a discrepancy between Quantity sold on Quote and amount implemented on Activation Lines. If +xx you miss to activate products, if -xx then you have activated too many products</inlineHelpText>
    <label>QC 70/80 nummer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>