force-app/main/default/objects/Activation__c/fields/QC_Afslutning_i_media_converter__c.field-meta.xml
<CustomField>
    <fullName>QC_Afslutning_i_media_converter__c</fullName>
    <formula>Activation_Check__r.Quote_Afslutning_i_media_converter__c - Activation_Check__r.Count_Afslutning_i_media_converter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If value is different from 0 it indicates that there is a discrepancy between Quantity sold on Quote and amount implemented on Activation Lines. If +xx you miss to activate products, if -xx then you have activated too many products</inlineHelpText>
    <label>QC Afslutning i media converter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>