force-app/main/default/objects/Activation__c/fields/QC_Barring_International_Roaming__c.field-meta.xml
<CustomField>
    <fullName>QC_Barring_International_Roaming__c</fullName>
    <formula>Activation_Check__r.Quote_Barring_International_Roaming__c - Activation_Check__r.Count_Barring_International_Roaming__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If value is different from 0 it indicates that there is a discrepancy between Quantity sold on Quote and amount implemented on Activation Lines. If +xx you miss to activate products, if -xx then you have activated too many products.</inlineHelpText>
    <label>QC Barring International Roaming</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>